# cis5710-homework

./: .devcontainer.json  .gitignore  .gitmodules  LICENSE  README.md  conftest.py  pytest.ini  riscv isa reference sheet.docx
.githooks/: pre-commit
docker/: Dockerfile  Dockerfile.arm64  Dockerfile.gradescope  Makefile
hw0/: Makefile  README.md  uppercase.S
hw0-riscv/: Makefile  README.md
hw1/: Makefile  codecheck.py  conftest.py  hw1.md  lab1.md  rca.sv  testbench.py
hw1-systemverilog/: Makefile  README.md  codecheck.py  hw1.lpf  rca.sv  testbench.py  treasure-hunt.fst
hw2a/: Makefile  README.md  codecheck.py  divider_unsigned.sv  hw2a-schematic.md  hw2a.md  testbench.py  testbench_1iter.py
hw2a-divider/: DividerUnsigned.sv  Makefile  README.md  codecheck.py  testbench.py  testbench_1iter.py
hw2b/: cla.sv  codecheck.py  hw2b-schematic.md  hw2b.md  testbench.py  testbench_gp4.py
hw2b-cla/: CarryLookaheadAdder.sv  Makefile  README.md  check-cla.sby  codecheck.py  hw2b-schematic.md  testbench.py  testbench_gp4.py
hw3-singlecycle/: DatapathSingleCycle.sv  Makefile  README.md  RvDisassembler.sv  codecheck.py  cycle_status.sv  hw3-singlecycle.md  make-mem-contents.py  mem_initial_contents.hex  testbench.py  testbench_regfile.py  trace-rv32ui-p-beq.json  trace-rv32ui-p-lui.json  trace-rv32ui-p-lw.json
hw4-multicycle/: DatapathMultiCycle.sv  Makefile  README.md  (+10 more)
hw6-cache/atarvi-native/: Cargo.toml  memory.x  smallmemory.x
hw6-cache/atarvi-native/.cargo/: config.toml
hw6-cache/atarvi-native/images/: font.rs
hw6-cache/atarvi-native/src/: main.rs
(+114 files in other folders)
